--- a/src/components/plasmic/cadmenclinic_migration/PlasmicBotoxSeo.module.css
+++ b/src/components/plasmic/cadmenclinic_migration/PlasmicBotoxSeo.module.css
@@ -2314,7 +2314,7 @@
   flex-direction: row;
   margin-right: auto;
   margin-left: auto;
-  max-width: 1400px;
+  max-width: 100%;
 }
 .freeBox__hib93 > :global(.__wab_flex-container) {
   flex-direction: row;
